--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                     Prof. <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a>. Before that, I received my Bachelor’s degree in Computer Science and Technology at Tsinghua University with the GPA of 4.00/4.00 (rank 1/238).
                   </p>
                   <p>
-                    My major research interests
-                    include multimodal foundation models, including vision-language foundation models, multimodal agents, and
+                    My research primarily focuses on multimodal foundation models, including vision-language models, multimodal agents, and
                     vision generation models.
                   </p>
                   <p style="text-align:center">
