update: GLM-4.1V-Thinking

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                   <a href="https://huggingface.co/THUDM/GLM-4.1V-9B-Thinking">Open-sourced Models</a>
                   /
                   <a href="https://www.bigmodel.cn/dev/api/visual-reasoning-model/GLM-4.1V-Thinking">API</a>
-                  <!-- / -->
-                  <!-- <a href="data/cogvlm2.bib">bibtex</a> -->
+                  /
+                  <a href="data/glm_4_1v_thinking.bib">bibtex</a>
                   <p></p>
                   <p>We present <strong> GLM-4.1V-Thinking </strong>, a VLM designed to advance general-purpose multimodal understanding and reasoning. With enhanced pre-trained base and carefully optimized multi-domain RL procedure, GLM-4.1V-9B-Thinking achieves state-of-the-art performance among models of comparable size. </p>
                 </td>
