--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
               <tr bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="image-container">
-                    <img src="images/GLM_4_1V_Thinking_thumbnail.jpg" alt="GLM-4.1V-Thinking Framework" width="250"
+                    <img src="images/GLM_4_5V_and_GLM_4_1V_Thinking_thumbnail.jpg" alt="Framework of GLM-4.5V and GLM-4.1V-Thinking" width="250"
                     style="border-style: none">
                   </div>
                 </td>
                 <td style="padding:8px;width:80%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2507.01006">
-                    <span class="papertitle">GLM-4.1V-Thinking: Towards Versatile Multimodal Reasoning with Scalable Reinforcement Learning
+                    <span class="papertitle">GLM-4.5V and GLM-4.1V-Thinking: Towards Versatile Multimodal Reasoning with Scalable Reinforcement Learning
                     </span>
                   </a>
                   <br>
@@ -115,24 +115,25 @@
                           <strong>Wenyi Hong</strong>, Wenmeng Yu, Xiaotao Gu, Guo Wang, Guobing Gan, Haomiao Tang, Jiale Cheng, Ji Qi, Junhui Ji, Lihang Pan, Shuaiqi Duan, Weihan Wang, Yan Wang, Yean Cheng, Zehai He, Zhe Su, Zhen Yang, Ziyang Pan, ..., Minlie Huang, Yuxiao Dong, Jie Tang
                       </span>
                       <span id="hidden-authors" class="hidden-authors">
-                          , Aohan Zeng, Baoxu Wang, Boyan Shi, Changyu Pang, Chenhui Zhang, Da Yin, Fan Yang, Guoqing Chen, Jiazheng Xu, Jiali Chen, Jing Chen, Jinhao Chen, Jinghao Lin, Jinjiang Wang, Junjie Chen, Leqi Lei, Letian Gong, Leyi Pan, Mingzhi Zhang, Qinkai Zheng, Sheng Yang, Shi Zhong, Shiyu Huang, Shuyuan Zhao, Siyan Xue, Shangqin Tu, Shengbiao Meng, Tianshu Zhang, Tianwei Luo, Tianxiang Hao, Wenkai Li, Wei Jia, Xin Lyu, Xuancheng Huang, Yanling Wang, Yadong Xue, Yanfeng Wang, Yifan An, Yifan Du, Yiming Shi, Yiheng Huang, Yilin Niu, Yuan Wang, Yuanchang Yue, Yuchen Li, Yutao Zhang, Yuxuan Zhang, Zhanxiao Du, Zhenyu Hou, Zhao Xue, Zhengxiao Du, Zihan Wang, Peng Zhang, Debing Liu, Bin Xu, Juanzi Li, Minlie Huang, Yuxiao Dong, Jie Tang
+                          , Aohan Zeng, Baoxu Wang, Bin Chen, Boyan Shi, Changyu Pang, Chenhui Zhang, Da Yin, Fan Yang, Guoqing Chen, Jiazheng Xu, Jiale Zhu, Jiali Chen, Jing Chen, Jinhao Chen, Jinghao Lin, Jinjiang Wang, Junjie Chen, Leqi Lei, Letian Gong, Leyi Pan, Mingdao Liu, Mingde Xu, Mingzhi Zhang, Qinkai Zheng, Sheng Yang, Shi Zhong, Shiyu Huang, Shuyuan Zhao, Siyan Xue, Shangqin Tu, Shengbiao Meng, Tianshu Zhang, Tianwei Luo, Tianxiang Hao, Tianyu Tong, Wenkai Li, Wei Jia, Xiao Liu, Xiaohan Zhang, Xin Lyu, Xinyue Fan, Xuancheng Huang, Yanling Wang, Yadong Xue, Yanfeng Wang, Yanzi Wang, Yifan An, Yifan Du, Yiming Shi, Yiheng Huang, Yilin Niu, Yuan Wang, Yuanchang Yue, Yuchen Li, Yutao Zhang, Yuting Wang, Yu Wang, Yuxuan Zhang, Zhao Xue, Zhenyu Hou, Zhengxiao Du, Zihan Wang, Peng Zhang, Debing Liu, Bin Xu, Juanzi Li, Minlie Huang, Yuxiao Dong, Jie Tang
                       </span>
-                      <span id="author-count" class="author-count"> (77 authors) </span>
+                      <span id="author-count" class="author-count"> (87 authors) </span>
                       <button id="toggle-btn" class="toggle-button">Show all authors</button>
                   </div>
                   <p></p>
                   <a href="https://arxiv.org/abs/2507.01006">ArXiv</a>
                   /
                   <a
-                    href="https://github.com/THUDM/GLM-4.1V-Thinking">GitHub</a>
+                    href="https://github.com/zai-org/GLM-V">GitHub</a>
                   /
-                  <a href="https://huggingface.co/THUDM/GLM-4.1V-9B-Thinking">Open-sourced Models</a>
+                  Models <a href="https://huggingface.co/zai-org/GLM-4.1V-9B-Thinking">4.1V</a>
+                   & <a href="https://huggingface.co/zai-org/GLM-4.5V">4.5V</a>
                   /
-                  <a href="https://www.bigmodel.cn/dev/api/visual-reasoning-model/GLM-4.1V-Thinking">API</a>
+                  API <a href="https://www.bigmodel.cn/dev/api/visual-reasoning-model/GLM-4.1V-Thinking">4.1V (free)</a>  & <a href="https://www.bigmodel.cn/dev/api/visual-reasoning-model/GLM-4.5V">4.5V</a>
                   /
                   <a href="data/glm_4_1v_thinking.bib">bibtex</a>
                   <p></p>
-                  <p>We present <strong> GLM-4.1V-Thinking </strong>, a VLM designed to advance general-purpose multimodal understanding and reasoning. With enhanced pre-trained base and carefully optimized multi-domain RL procedure, GLM-4.1V-9B-Thinking achieves state-of-the-art performance among models of comparable size. </p>
+                  <p>We present <strong> GLM-4.5V </strong> (106B-A12B) and <strong> GLM-4.1V-Thinking </strong> (9B), a series of open-sourved VLMs designed to advance general-purpose multimodal understanding and reasoning. With enhanced pre-trained base and carefully optimized multi-domain RL procedure, GLM-4.5V achieves state-of-the-art performance on nearly all tasks among open-source models of similar size in a comprehensive evaluation across 42 public benchmarks. </p>
                 </td>
                   <script>
                     const toggleBtn = document.getElementById('toggle-btn');
