update: personal info

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Wenyi Hong
                   </p>
                   <p>
-                    I am a third-year PhD student in Computer Science at Tsinghua University since 2022, supervised by
+                    I am a fourth-year PhD student in Computer Science at Tsinghua University since 2022, supervised by
                     Prof. <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a>. Before that, I received my Bachelor’s degree in Computer Science and Technology at Tsinghua University with the GPA of 4.00/4.00 (rank 1/238).
                   </p>
                   <p>
@@ -133,7 +133,7 @@
                   /
                   <a href="data/glm_4_1v_thinking.bib">bibtex</a>
                   <p></p>
-                  <p>We present <strong> GLM-4.5V </strong> (106B-A12B) and <strong> GLM-4.1V-Thinking </strong> (9B), a series of open-sourved VLMs designed to advance general-purpose multimodal understanding and reasoning. With enhanced pre-trained base and carefully optimized multi-domain RL procedure, GLM-4.5V achieves state-of-the-art performance on nearly all tasks among open-source models of similar size in a comprehensive evaluation across 42 public benchmarks. </p>
+                  <p>We present <strong> GLM-4.5V </strong> (106B-A12B) and <strong> GLM-4.1V-Thinking </strong> (9B), a series of open-sourced VLMs designed to advance general-purpose multimodal understanding and reasoning. With enhanced pre-trained base and carefully optimized multi-domain RL procedure, GLM-4.5V achieves state-of-the-art performance on nearly all tasks among open-source models of similar size in a comprehensive evaluation across 42 public benchmarks. </p>
                 </td>
                   <script>
                     const toggleBtn = document.getElementById('toggle-btn');
